Serve local attachments statically
